--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
+server.servlet.context-path=/application
 
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
