Configuração para oauth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 server.servlet.context-path=/application
 
+security.oauth2.client.scope=application
+security.oauth2.client.client-id=0073c255-02ca-43b6-9f55-862add0725df
+security.oauth2.client.client-secret=7eb20485-110c-4087-905d-eb70f50e658d
+security.oauth2.client.access-token-validity-seconds=86400
+
 spring.liquibase.enabled=false
